--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "lib": "lib",
     "test": "tests"
   },
-  "dependencies": {
-    "xss": "^0.3.7"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^9.4.6",
     "ava": "^0.25.0",
